<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/toolbar_background"
    tools:context=".AuthUi.LoginActivity">


    <ImageView
        android:layout_width="207dp"
        android:layout_height="64dp"
        android:layout_marginTop="92dp"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="332dp"
        android:layout_height="376dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="8dp"
            android:text="@string/login_text"
            android:textSize="27sp" />

        <com.example.trippal.CustomView.EmailEditText
            android:id="@+id/et_email"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center|start"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="70dp"
            android:drawableStart="@drawable/baseline_mail_24"
            android:hint="@string/email_text" />

        <com.example.trippal.CustomView.PasswordEditText
            android:id="@+id/et_password"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center|start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:drawableStart="@drawable/baseline_lock_24"
            android:hint="@string/pass_text" />

        <com.example.trippal.CustomView.SubmitButton
            android:id="@+id/login_button"
            android:layout_width="163dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="20dp"
            android:text="@string/login_text" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Belum punya akun?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/regis_button"
        android:layout_width="65dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:text="@string/register_text"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.109" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>